<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/rightButton"
        android:onClick="buttonClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/leftButton"
        android:layout_alignBottom="@+id/leftButton"
        android:layout_toRightOf="@+id/upButton"
        android:text= "@string/right" />

    <Button
        android:id="@+id/downButton"
        android:onClick="buttonClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rightButton"
        android:layout_toLeftOf="@+id/rightButton"
        android:text= "@string/down" />

    <TextView
        android:id="@+id/dancin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="@string/empty"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/upButton"
        android:onClick="buttonClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rightButton"
        android:layout_centerHorizontal="true"
        android:text="@string/up" />

    <Button
        android:id="@+id/leftButton"
        android:onClick="buttonClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dancin"
        android:layout_marginTop="99dp"
        android:layout_toLeftOf="@+id/downButton"
        android:text="@string/left" />

    <Button
        android:id="@+id/danceButton"
        android:onClick="buttonClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="31dp"
        android:text="@string/dance" />

    <ImageView
        android:id="@+id/dancer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/danceButton"
        android:layout_centerHorizontal="true"
        android:src="@drawable/dancedef" />

    <ImageView
        android:id="@+id/dancerL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/danceButton"
        android:layout_toLeftOf="@+id/dancer"
        android:src="@drawable/empty" />

    <ImageView
        android:id="@+id/DancerR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/danceButton"
        android:layout_toRightOf="@+id/dancer"
        android:src="@drawable/empty" />

    <ImageView
        android:id="@+id/DancerLL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/danceButton"
        android:layout_toLeftOf="@+id/dancerL"
        android:src="@drawable/empty" />

    <ImageView
        android:id="@+id/DancerRR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/danceButton"
        android:layout_toRightOf="@+id/DancerR"
        android:src="@drawable/empty" />

</RelativeLayout>