<!-- 
 * UCSD VIS 141A project
 * DancinAndroid 
 * 
 * Created By: Monica Liu
 * Last Modified 2/10/14  -->
 
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AboutActivity" >

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="11dp"
        android:text="@string/description"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/intr1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/description"
        android:layout_below="@+id/description"
        android:layout_marginTop="58dp"
        android:text="@string/instructions_dir"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/intr2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/intr1"
        android:layout_below="@+id/intr1"
        android:layout_marginTop="44dp"
        android:text="@string/instructions_dance"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    </RelativeLayout>